# parties_de_shogi

./: commit.b.sh  partie_01.kif  pyproject.toml  readkif.py  request.txt
doc/: Kif • lishogi.org (1_16_2022 2_03_24 PM).html  Shogi KIF file standard (1_16_2022 2_03_42 PM).html  gunyarakun_python-shogi_ A pure Python shogi library with move generation and validation and handling of common formats. (1_16_2022 2_04_53 PM).html  python-shogi_KIF.py at master · gunyarakun_python-shogi (1_16_2022 2_04_56 PM).html
